add button elements to menu

--- a/src/Components/Styles/MenuBf.css
+++ b/src/Components/Styles/MenuBf.css
@@ -4,7 +4,7 @@
     align-content: center;
     height: 1000px;
 } */
-.menu-bf {
+/* .menu-bf {
     align-self: center;
     width: min-content;   
  }
@@ -21,4 +21,4 @@
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
- }
+ } */
