--- a/src/Components/Styles/AddItem.css
+++ b/src/Components/Styles/AddItem.css
@@ -1,4 +1,4 @@
-#counter{
+/* #counter{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -9,4 +9,4 @@
 .btn-amount{
     height: min-content;
     border-radius: 10px;
-}
+} */
