--- a/src/Components/Styles/ShowMenu.css
+++ b/src/Components/Styles/ShowMenu.css
@@ -17,8 +17,9 @@
     /* align-content: space-around; */
     /* align-content: center; */
     margin-top: 20px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     width: 600px;
+    height: 300px;
 }
 
 #order{
@@ -46,6 +47,26 @@ label{
 
 #input-table{
     width: 35px;
+}
+
+#resumen{
+    background-color: #F3DB85;
+    border-radius: 10px;
+    width: 600px;
+    height: max-content;
+    align-self: center;
+    margin-bottom: 25px;
+}
+
+#resumen-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 10px;
+}
+
+hr{
+    background-color: black;
 }
 
 #btn-options, #btn-send{
