--- a/src/Components/Styles/Cards.css
+++ b/src/Components/Styles/Cards.css
@@ -25,8 +25,9 @@
    align-content: center;
    flex-wrap: wrap;
    justify-content: space-around;
-    margin-bottom: 180px;
-    margin-left: 100px;
+   margin-top: 90px;
+   margin-bottom: 180px;
+   margin-left: 100px;
 }
 
 .add-bf{
