--- a/src/Components/Styles/ShowMenu.css
+++ b/src/Components/Styles/ShowMenu.css
@@ -66,7 +66,7 @@ label{
     margin-top: 10px;
 }
 
-#items{
+#items, #total-price{
     padding-left: 25px;
     font-size: 20px;
 }
@@ -74,6 +74,7 @@ label{
 hr{
     background-color: black;
 }
+
 
 #btn-options, #btn-send{
     display: flex;
