--- a/src/Components/Styles/ShowMenu.css
+++ b/src/Components/Styles/ShowMenu.css
@@ -55,8 +55,9 @@ label{
     width: 600px;
     height: max-content;
     align-self: center;
-    margin-top: 90px;
+    margin-top: 35px;
     margin-bottom: 25px;
+    padding-bottom: 1px;
 }
 
 #resumen-header {
@@ -64,11 +65,18 @@ label{
     flex-direction: row;
     justify-content: space-around;
     margin-top: 10px;
+    padding-top: 10px;
 }
 
 #items, #total-price{
     padding-left: 25px;
     font-size: 20px;
+    
+}
+
+#total-price{
+    font-style: oblique;
+    font-size: 25px;
 }
 
 hr{
