--- a/src/Components/Styles/Reception.css
+++ b/src/Components/Styles/Reception.css
@@ -7,6 +7,8 @@
     height: 900px;
 }
 .card-comanda{
-    background-image: url('../../assets/postit.png');
+    background-image: url("https://i.pinimg.com/originals/54/bb/56/54bb56c7785472bd54344e054e539324.jpg");
+    width: 20%;
+    height: 20%;
 
 }
