--- a/src/Components/Styles/Reception.css
+++ b/src/Components/Styles/Reception.css
@@ -2,17 +2,40 @@
     margin-left: 300px;
     margin-top: 120px;
     display: flex;
-    flex-direction: column;
-    width: 900px;
-    height: 900px;
+    flex-wrap:wrap;
+    flex-direction:column;
+    width: 700px;
+    height: 945px;
+    
     overflow: scroll;
   }
-  .card-comanda {
-    background-image: url("../../assets/postit.png");
-    background-size: auto 100px;
-    height: auto;
-    width: 400px;
-    /* margin-bottom: 20px;
-    padding-bottom: 50px; */
+
+  #postit{
+    background-image: url("../../assets/purple-postit.png");
+    /* background: #ffc4009c; */
+    background-size: 90% 90%;
+    background-clip: border-box;
+    background-repeat: no-repeat;
+    width: 450px;
+    height: 390px;
+    overflow: scroll;
+    margin-bottom: 10px;
+    margin-right: 5px;
   }
-  
+
+  .card-comanda {   
+      overflow: scroll;
+    height: 300px;   
+    margin-top: 30px;
+}
+
+h1, h2{     
+      /* border-top: #68530d9c;   */
+      margin-left: 60px;
+      margin-bottom: 1px;
+  }
+
+ p{
+      margin-left: 90px;  
+      font-size: 20px;  
+  }
