--- a/src/Components/Styles/Header.css
+++ b/src/Components/Styles/Header.css
@@ -5,6 +5,10 @@
     left: 0px;
     top: 0px;
     background: #F3DB85;
+    /* display: flex;
+    flex-direction: row; */
+    padding-left: 45px;
+    
 }
 #logo2{
     position: absolute;
@@ -12,3 +16,18 @@
     left: 45px;
     top: 3px;
 }
+/* .btn-nav {
+    width: 200px;
+    height: 70px;
+    left: 0px;    
+    font-size: 20px;
+    line-height: 48px;  
+    color: #6f1a70;
+   align-self: center;
+    border-style: none;
+    background: none;
+    transition: all .1s ease;
+}
+.btn-nav:active {
+    background: #F3DB85;
+} */
