--- a/src/Components/Styles/Reception.css
+++ b/src/Components/Styles/Reception.css
@@ -13,16 +13,22 @@
 
   /*Contenedor de cada orden en Reception*/
   #postit{
-    background-image: url("../../assets/purple-postit.png");
-    /* background: #ffc4009c; */
+    /* background-image: url("../../assets/purple-postit.png");
+    /* background: #ffc4009c; 
     background-size: 90% 90%;
     background-clip: border-box;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
+    background-color: rgba(229, 173, 236, 0.623);
     width: 450px;
-    height: 390px;
+    border-radius: 20px;
+    /* height: 390px; */
     overflow: scroll;
+    height: max-content;
     margin-bottom: 10px;
-    margin-right: 5px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    font-size: large;
   }
 
   .card-comanda {   
@@ -33,11 +39,40 @@
 
 h1, h2{     
       /* border-top: #68530d9c;   */
-      margin-left: 60px;
+      margin-left: 10px;
       margin-bottom: 1px;
   }
 
  p{
-      margin-left: 90px;  
+      margin-left: 10px;  
       font-size: 20px;  
+      font-style:oblique;
+  }
+
+hr{
+    background-color: black;
+}
+
+  table{
+    margin-left: 15px;
+    font-size: 22px;
+  }
+
+  #order-header{
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 15px;
+    /* margin-bottom: 10px; */
+    font-size: 22px;
+    color: #6f1a70;
+  }
+
+  #order-info{
+    padding-bottom: 15px;
+  }
+
+  #status{
+    font-size: 25px;
+    color: #6f1a70;
+    margin-left: 160px;
   }
