--- a/src/Components/Styles/Reception.css
+++ b/src/Components/Styles/Reception.css
@@ -1,78 +1,87 @@
 /*Contenedor de las órdenes guardadas*/
 #comanda-container {
-    margin-left: 300px;
-    margin-top: 120px;
-    display: flex;
-    flex-wrap:wrap;
-    flex-direction:column;
-    width: 700px;
-    height: 945px;
-    
-    overflow: scroll;
-  }
+  margin-left: 300px;
+  margin-top: 120px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 700px;
+  height: 945px;
 
-  /*Contenedor de cada orden en Reception*/
-  #postit{
-    /* background-image: url("../../assets/purple-postit.png");
+  overflow: scroll;
+}
+
+/*Contenedor de cada orden en Reception*/
+#postit {
+  /* background-image: url("../../assets/purple-postit.png");
     /* background: #ffc4009c; 
     background-size: 90% 90%;
     background-clip: border-box;
     background-repeat: no-repeat; */
-    background-color: rgba(229, 173, 236, 0.623);
-    width: 450px;
-    border-radius: 20px;
-    /* height: 390px; */
-    overflow: scroll;
-    height: max-content;
-    margin-bottom: 10px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    font-size: large;
-  }
+  background-color: rgba(229, 173, 236, 0.623);
+  width: 450px;
+  border-radius: 20px;
+  /* height: 390px; */
+  overflow: scroll;
+  height: max-content;
+  margin-bottom: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  font-size: large;
+}
 
-  .card-comanda {   
-      overflow: scroll;
-    /* height: 300px;   
+.card-comanda {
+  overflow: scroll;
+  /* height: 300px;   
     margin-top: 30px; */
 }
 
-h1, h2{     
-      /* border-top: #68530d9c;   */
-      margin-left: 10px;
-      margin-bottom: 1px;
-  }
-
- p{
-      margin-left: 10px;  
-      font-size: 20px;  
-      font-style:oblique;
-  }
-
-hr{
-    background-color: black;
+h1,
+h2 {
+  /* border-top: #68530d9c;   */
+  margin-left: 10px;
+  margin-bottom: 1px;
 }
 
-  table{
-    margin-left: 15px;
-    font-size: 22px;
-  }
+p {
+  margin-left: 10px;
+  font-size: 20px;
+  font-style: oblique;
+}
 
-  #order-header{
-    display: flex;
-    justify-content: space-around;
-    padding-bottom: 15px;
-    /* margin-bottom: 10px; */
-    font-size: 22px;
-    color: #6f1a70;
-  }
+hr {
+  background-color: black;
+}
 
-  #order-info{
-    padding-bottom: 15px;
-  }
+table {
+  margin-left: 15px;
+  font-size: 22px;
+}
 
-  #status{
-    font-size: 25px;
-    color: #6f1a70;
-    margin-left: 160px;
-  }
+#check {
+  height: 40px;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+#order-header {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 15px;
+  /* margin-bottom: 10px; */
+  font-size: 22px;
+  color: #6f1a70;
+}
+
+#order-info {
+  padding-bottom: 15px;
+  display: flex;
+  flex-direction: row;
+}
+
+#status {
+  font-size: 25px;
+  color: #6f1a70;
+  margin-left: 130px;
+}
