--- a/src/Components/Styles/Reception.css
+++ b/src/Components/Styles/Reception.css
@@ -25,6 +25,7 @@
   overflow: scroll;
   height: max-content;
   margin-bottom: 10px;
+  margin-right: 10px;
   padding: 10px;
   display: flex;
   flex-direction: column;
