--- a/src/Components/Styles/Reception.css
+++ b/src/Components/Styles/Reception.css
@@ -21,9 +21,9 @@
   background-color: rgba(229, 173, 236, 0.623);
   width: 450px;
   border-radius: 20px;
-  /* height: 390px; */
+  height: 390px;
   overflow: scroll;
-  height: max-content;
+  /* height: max-content; */
   margin-bottom: 10px;
   margin-right: 10px;
   padding: 10px;
@@ -47,7 +47,7 @@ h2 {
 
 p {
   margin-left: 10px;
-  font-size: 20px;
+  font-size: 15px;
   font-style: oblique;
 }
 
@@ -63,6 +63,12 @@ table {
 #check {
   height: 40px;
   margin-top: 20px;
+  margin-left: 20px;
+}
+
+#delivery{
+  height: 60px;
+  margin-top: 10px;
   margin-left: 20px;
 }
 
@@ -84,5 +90,5 @@ table {
 #status {
   font-size: 25px;
   color: #6f1a70;
-  margin-left: 130px;
+  margin-left: 90px;
 }
